cmake_minimum_required(VERSION 3.5)

project(mqtt_ros2)


# Default to C++14


#find_package(ament_cmake REQUIRED)
#find_package(builtin_interfaces REQUIRED)
#find_package(sensor_msgs REQUIRED)
#find_package(geometry_msgs REQUIRED)
#find_package(std_msgs REQUIRED)
#find_package(rosidl_default_generators REQUIRED)
#find_package(nav_msgs REQUIRED)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
