<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_ros2</name>
  <version>0.0.1</version>
  <description>A package to allow the ROS2 Hunter to communicate to the Coordinator via mqtt</description>
  <maintainer email="amieo@live.co.uk">Amie</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <depend>ament_cmake</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
